Table product {
  product_id int [pk, increment]
  name varchar
  brand_id int [ref: > brand.brand_id]
  category_id int [ref: > product_category.category_id]
  base_price decimal
}

Table product_image {
  image_id int [pk, increment]
  product_id int [ref: > product.product_id]
  url varchar
}

Table color {
  color_id int [pk, increment]
  name varchar
  hex_code varchar
}

Table size_category {
  size_category_id int [pk, increment]
  name varchar
}

Table size_option {
  size_option_id int [pk, increment]
  name varchar
  size_category_id int [ref: > size_category.size_category_id]
}

Table product_item {
  item_id int [pk, increment]
  product_id int [ref: > product.product_id]
  sku varchar
  stock int
  price_override decimal
}

Table product_variation {
  variation_id int [pk, increment]
  item_id int [ref: > product_item.item_id]
  color_id int [ref: > color.color_id]
  size_option_id int [ref: > size_option.size_option_id]
}

Table attribute_category {
  attribute_category_id int [pk, increment]
  name varchar
}

Table attribute_type {
  attribute_type_id int [pk, increment]
  name varchar
  data_type varchar
}

Table product_attribute {
  attribute_id int [pk, increment]
  product_id int [ref: > product.product_id]
  name varchar
  value varchar
  attribute_type_id int [ref: > attribute_type.attribute_type_id]
  attribute_category_id int [ref: > attribute_category.attribute_category_id]
}

Table brand {
  brand_id int [pk, increment]
  name varchar
}

Table product_category {
  category_id int [pk, increment]
  name varchar
}
